syntax = "proto3";

message Message {
  oneof type {
    PeerPseudo peerPseudo = 1;
    PeerCursor peerCursor = 2;
    LogootSAdd logootSAdd = 3;
    LogootSDel logootSDel = 4;
    LogootSRopes logootSRopes = 5;
    QueryDoc queryDoc = 6;
    Door door = 7;
  }
}

message PeerPseudo {
  string pseudo = 1;
}

message PeerCursor {
  Identifier id = 1;
  int32 index = 2;
}

message LogootSAdd {
  Identifier id = 1;
  string content = 2;
}

message LogootSDel {
  repeated IdentifierInterval lid = 1;
}

message LogootSRopes {
  RopesNode root = 1;
  string str = 2;
}

message RopesNode {
  LogootSBlock block = 1;
  RopesNode left = 2;
  RopesNode right = 3;
  int32 offset = 4;
  int32 length = 5;
}

message LogootSBlock {
  IdentifierInterval id = 1;
  int32 nbElement = 2;
}

message Identifier {
  repeated double base = 1;
  int32 last = 2;
}

message IdentifierInterval {
  repeated double base = 1;
  int32 begin = 2;
  int32 end = 3;
}

message QueryDoc {}

message Door {
  string key = 1;
  bool opened = 2;
  bool intentionally = 3;
}
